# aula-19

./: Dockerfile  main.py  models.py  pyproject.toml  schema.py  test.db
